updated the test cases for html var

--- a/tests/htmlvars/vars.html
+++ b/tests/htmlvars/vars.html
@@ -1,43 +1,60 @@
 
 
+<div style="padding: 20px">
+
+	
 
 
 	
-	<b> HELLO WORLD </b> <br>
-
-
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
 	
-	<b> HELLO WORLD </b> <br>
-
-
 	
-	<b> HELLO WORLD </b> <br>
-
-
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
 	
-	<b> HELLO WORLD </b> <br>
-
-
 	
-	<b> HELLO WORLD </b> <br>
-
-
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
 	
-	<b> HELLO WORLD </b> <br>
-
-
 	
-	<b> HELLO WORLD </b> <br>
-
-
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
 	
-	<b> HELLO WORLD </b> <br>
-
-
 	
-	<b> HELLO WORLD </b> <br>
-
-
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
 	
-	<b> HELLO WORLD </b> <br>
+	
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
+	
+	
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
+	
+	
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
+	
+	
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
+	
+	
+		
+		<b> HELLO WORLD </b> <br>
+		Whatsup!<br>
+	
+	
 
+</div>
