updated the tests for html arrays

--- a/tests/htmlvars/vars.html
+++ b/tests/htmlvars/vars.html
@@ -1,7 +1,7 @@
 
 
 <div style="padding: 20px">
-
+	
 
 	
 
@@ -59,6 +59,22 @@
 
 
 </div>
+
+
+
+
+LENGTH IS
+2
+ELEMENTS
+
+
+	
+	Howdy
+
+
+	
+	planet
+
 
 
 
