line number debugging works include function calls and file names still need to be implemented

--- a/tests/debugOutput/docWithError.html
+++ b/tests/debugOutput/docWithError.html
@@ -3,7 +3,7 @@
 	<body>
 		{{print "THIS WORKS"}}
 		does it not?
-		{{print helloworld}}
+		{{#print helloworld}}
 		and now it is broken
 		{{print "That sucks"}}
 	</body>
